  * Fixed installing files per package paths.
  * Setting back maintainer to Debian KDE Extras Team.
  * Menu:
    - Fixed menu file syntax error.
    - Correctly point to 32x32 icon.
    - Reworked 05_xpmicon.patch to only include 32x32 icons.
  * Moved desktop file from kvirc-data to kvirc package.
  * Disabled coexistence with kvirc3.
  * Moving manpage from kvirc-data to kvirc package.

 -- Raúl Sánchez Siles <rasasi78@gmail.com>  Wed, 25 Mar 2009 01:39:37 +0100

kvirc (4:4.0.0~svn3039-0ubuntu2) jaunty; urgency=low

  [ Alessandro Ghersi ]
  * Fix missing icon in menu (LP: #335023)
  * Add kubuntu_02_fix_cmakelist_icons.patch and refresh 05_xpmicon.patch

  [ Alessio Treglia ]
  * Section field in kvirc-data duplicates the value inherited from source package,
    fixed.

 -- Alessandro Ghersi <alessandro.ghersi@fastwebnet.it>  Wed, 25 Feb 2009 05:32:10 +0100

kvirc (4:4.0.0~svn3039-0ubuntu1) jaunty; urgency=low

  * SVN pre-release (2009/01/26)
  * Update debian/copyright
  * Update packaging to use kde4.mk and cmake
  * Update build deps
  * Update compat (debhelper >= 6)
  * Update standards to 3.8.0
  * Update *.install to comply with new standards version
  * Fix post/pre scripts to update alternatives for irc.protocol
  * Remove unnecessary patches
    - 01_am_maintainer_mode.patch
    - 02_rpath.patch
    - 09_plugin_dir.patch
    - 13_eula.patch
    - 30_security-cipherlist-bad-order_r1990.patch
    - 31_r1997-irchandler-exploit-bug503401.patch
    - 51_PERL_SYS_INIT3_r2271-bug495064.patch
    - 52_windowmenu-crashes_r1991.patch
    - 98_buildprep.diff
  * New patches
    - kubuntu_01_fix_desktop_entry.patch
  * Update patches
    - 05_xpmicon.patch

 -- Roderick B. Greening <roderick.greening@gmail.com>  Tue, 27 Jan 2009 00:33:18 -0330

kvirc (2:3.4.0-3) unstable; urgency=medium

  * try to start command via irc:// handler (Closes: #503401). 
    Added 31_r1997-irchandler-exploit-bug503401.patch
  * Urgency medium due to potential security bug fix.
